Fixing z-index on calendar date badges.
Summary: Fixes T4787, decreased z-index on calendar badges so that they don't sit on top of  notification dropdowns when dropdowns are expanded. Not sure why the badges had z-index 10, but please let me know if there was a more substantial reason for this.

Test Plan: If neither notification dropdowns have content, create enough messages to populate at least 5 rows, open calendar, expand messages dropdown, verify that underlying calendar date badges do not appear over the dropdown.

Reviewers: chad, #blessed_reviewers, epriestley

Reviewed By: #blessed_reviewers, epriestley

Subscribers: epriestley, Korvin

Maniphest Tasks: T4787

Differential Revision: https://secure.phabricator.com/D8770

--- a/webroot/rsrc/css/core/z-index.css
+++ b/webroot/rsrc/css/core/z-index.css
@@ -38,6 +38,10 @@
   z-index: 3;
 }
 
+.phabricator-crumbs-view {
+  z-index: 3;
+}
+
 .phabricator-nav-local {
   z-index: 4;
 }
@@ -67,8 +71,8 @@
   z-index: 5;
 }
 
-.phabricator-crumbs-view {
-  z-index: 3;
+.phui-calendar-date-number  {
+  z-index: 5;
 }
 
 .phabricator-main-menu {
